added background and sampling strategy

--- a/docs/lm.Rmd
+++ b/docs/lm.Rmd
@@ -35,6 +35,7 @@ plot(x, y)
 The first line generates some data and assigns it to the variable `x`.
 The secons line uses a contrived slope (0.5) and intercept (1) to generate values which we assign to the variable `y`.
 Because the values of `y` **depend** on `x` we sometimes call `y` the **dependent** variable and `x` the **independent** variable.
+Similarly, we may refer to `y` as the **response** and `x` as **predictor(s)**.
 The line crosses the y-intercept at one and for each increase of value in `x` we see a half increase in `y`.
 
 
